bk_ida/gobmkida/c2/gtp_top_moves_white
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/interface/play_gtp.c:2729:18: error: use of undeclared identifier 'dword_9B53A8'
if ( *( float *)&dword_9B53A8[v1] > 0.0 ) 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/interface/play_gtp.c:2731:19: error: use of undeclared identifier 'dword_9B53D8'
gtp_print_vertex( dword_9B53D8[v1] / 20 - 1, dword_9B53D8[v1] + ~( 20 * ( dword_9B53D8[v1] / 20))); 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/interface/play_gtp.c:2731:75: error: use of undeclared identifier 'dword_9B53D8'
gtp_print_vertex( dword_9B53D8[v1] / 20 - 1, dword_9B53D8[v1] + ~( 20 * ( dword_9B53D8[v1] / 20))); 
                                                                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/interface/play_gtp.c:2731:46: error: use of undeclared identifier 'dword_9B53D8'
gtp_print_vertex( dword_9B53D8[v1] / 20 - 1, dword_9B53D8[v1] + ~( 20 * ( dword_9B53D8[v1] / 20))); 
                                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/interface/play_gtp.c:2732:35: error: use of undeclared identifier 'dword_9B53A8'
gtp_printf( " %.2f ", *( float *)&dword_9B53A8[v1]); 
                                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_top_moves_white/src/obj/2/play_gtp.o] Error 1
